## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

ipstat_monitor_includedir = $(pkgincludedir)

ipstat_monitor_include_DATA = \
	ipstat_monitor.h\
	lib_tree.h

EXTRA_DIST = $(ipstat_monitor_include_DATA)
