## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall

bin_PROGRAMS = ipstat_monitor

ipstat_monitor_SOURCES = \
	main.c\
	lib_tree.c

ipstat_monitor_LDFLAGS = 

ipstat_monitor_LDADD =  -lpcap -lz @MY_LIBS@

